--- a/Chance.MvvmCross.Plugins.UserInteraction.Droid/packages.config
+++ b/Chance.MvvmCross.Plugins.UserInteraction.Droid/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="22.1.1.1" targetFramework="MonoAndroid403" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.1.1.1" targetFramework="MonoAndroid403" />
+  <package id="MvvmCross.HotTuna.Binding" version="4.0.0-beta3" targetFramework="MonoAndroid403" />
+  <package id="MvvmCross.HotTuna.CrossCore" version="4.0.0-beta3" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid403" />
 </packages>
