--- a/Chance.MvvmCross.Plugins.UserInteraction.WindowsPhone/packages.config
+++ b/Chance.MvvmCross.Plugins.UserInteraction.WindowsPhone/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MvvmCross.HotTuna.Binding" version="4.0.0-beta3" targetFramework="wp80" />
+  <package id="MvvmCross.HotTuna.CrossCore" version="4.0.0-beta3" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
 </packages>
